--- a/assets/carte/cmap/style.css
+++ b/assets/carte/cmap/style.css
@@ -1,18 +1,18 @@
 #canvasMap{
-     
       position: absolute;
         width : 320px;
         height : 320px;
 		z-index: 50;
+
 }
 
 #legende {
-	font-size: 12px;
-	color: #990000;
+	font-size: 30px;
+	color: #2C3E50;
 	font-weight: bold;
 	z-index: 100;
 	margin-bottom: 30px;
-	background-color: #FFFFFF;
+	background-color: #C4C4C4;
 	position: absolute;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	padding: 4px;
